--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "c:\\users\\bahromiddin\\appdata\\local\\programs\\python\\python39\\python.exe"
+    "python.pythonPath": "c:\\users\\bahromiddin\\appdata\\local\\programs\\python\\python39\\python.exe",
+    "git.ignoreLimitWarning": true
 }
